--- a/_layouts/opti.html
+++ b/_layouts/opti.html
@@ -2,7 +2,7 @@
 <html lang="fr-FR">
   <head>
     <title>Optimisation | PouletEnSlip</title>
-    <meta name="description" content="Guide fiable et à jour pour optimiser Windows.">
+    <meta name="description" content="Guide fiable et à jour pour optimiser Windows et améliorer les performances de votre ordinateur.">
     <meta name="application-name" content="Optimisation | PouletEnSlip">
     <meta name="author" content="PouletEnSlip">
     <meta name="copyright" content="PouletEnSlip">
@@ -10,11 +10,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Optimisation | PouletEnSlip">
-    <meta property="og:description" content="Guide fiable et à jour pour optimiser Windows.">
+    <meta property="og:description" content="Guide fiable et à jour pour optimiser Windows et améliorer les performances de votre ordinateur.">
     <meta property="og:site_name" content="Optimisation | PouletEnSlip">
     <meta property="og:url" content="https://pouletenslip.github.io/pages/opti/">
     <meta property="og:image" content="https://pouletenslip.github.io/favicon.ico">
     <meta property="og:locale" content="fr-FR">
+    <meta name="twitter:title" content="Optimisation | PouletEnSlip">
+    <meta name="twitter:description" content="Guide fiable et à jour pour optimiser Windows et améliorer les performances de votre ordinateur.">
+    <meta name="twitter:image" content="https://pouletenslip.github.io/favicon.ico">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://pouletenslip.github.io/pages/opti/">
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
