--- a/pages/clicktest/style.css
+++ b/pages/clicktest/style.css
@@ -1,73 +1,41 @@
-* {
-    font-family: Arial;
-    text-shadow: 2px 2px 4px black;
-    color: white;
-}
-
-#title {
-    font-size: 50px;
-}
-
-#info {
-    font-size: 20px;
-}
-
-#clicker {
-    height: 250px;
-    width: 750px;
-    font-size: 50px;
-    border-radius: 25px;
-    border: 5px solid #750000;
-    background-color: #aaa;
-    transition-duration: 0.1s;
-    cursor: pointer;
-}
-
-#clicker:hover {
-    border: 3px solid #750000;
-    background-color: #AA5050;
-}
-
-#cps {
-    font-size: 25px;
-    font-weight: bold;
-    color:white;
+h1 {
+  font-size: 40px;
+  color: #fff;
 }
 
 body {
-    background-image:url(./bg.jpg);
+  background-color: #333;
+  color: white;
+  font-family: "Arial";
+  text-align: center;
+  text-shadow: 2px 2px 8px black;
+  user-select: none;
 }
 
 .bouton {
-    background-color: #9b0000;
-    border: 2px solid #610000;
-	border-radius: 10px;
-    color: white;
-    padding: 10px 30px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2), 0 1px 5px 0 rgba(0,0,0,0.19);
-	transition-duration: 0.1s;
-    cursor: pointer;
+  width: 200px;
+  height: 80px;
+  border: 4px solid rgb(225, 60, 60);
+  background: #ffffff00;
+  color: rgb(225, 60, 60);
+  cursor: pointer;
+  font-size: 25px;
+  transition: 0.2s;
+  box-shadow: 0 0 10px rgb(255, 72, 72),
+                0 0 10px rgb(255, 72, 72),
+                0 0 10px rgb(255, 72, 72),
+                0 0 10px rgb(255, 72, 72);
 }
 
 .bouton:hover {
-	background-color: #b63636;
-    border: 2px solid #610000;
-	color: white;
+  background: rgba(255, 37, 37, 0.2);
+  color: white;
+  box-shadow: 0 0 12px rgb(255, 110, 110),
+              0 0 12px rgb(255, 110, 110),
+              0 0 12px rgb(255, 110, 110),
+              0 0 12px rgb(255, 110, 110);
 }
 
-@media only screen and (max-width: 800px) {
-    #clicker {
-        height: 200px;
-        width: 100%;
-    }
-}
-
-@media only screen and (min-width: 1921px) {
-	body {
-		background-size: cover;
-	}
+#chrono {
+  font-size: 80px;
 }
