--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -31,6 +31,10 @@
   background: linear-gradient(0deg, rgba(26,149,199,1) 0%, rgba(0,237,255,1) 100%);
 }
 
+.container input:checked ~ .lol {
+  text-decoration: underline;
+}
+
 .checkmark:after {
   content: "";
   position: absolute;
@@ -39,21 +43,6 @@
 
 .container input:checked ~ .checkmark:after {
   display: block;
-}
-
-.container input:checked ~ .container {
-  font-weight: 800;
-}
-
-.container:after {
-  content: "";
-  position: absolute;
-  display: none;
-  font-weight: 800;
-}
-
-.container input:checked ~ .container:after {
-  font-weight: 800;
 }
 
 .container .checkmark:after {
