--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -27,12 +27,13 @@
   background-color: #eee;
 }
 
-.container input:checked ~ .lol {
-  text-decoration: line-through;
-}
-
 .container input:checked ~ .checkmark {
   background: linear-gradient(0deg, rgba(26,149,199,1) 0%, rgba(0,237,255,1) 100%);
+}
+
+
+.container input:checked ~ .label {
+  text-decoration: line-through;
 }
 
 .checkmark:after {
