--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -27,12 +27,6 @@
   background-color: #eee;
 }
 
-
-
-.container input:checked ~ .container {
-  text-decoration: line-through;
-}
-
 .checkmark:after {
   content: "";
   position: absolute;
@@ -41,6 +35,7 @@
 
 .container input:checked ~ .checkmark:after {
   display: block;
+  color: #aaa;
 }
 
 .container .checkmark:after {
@@ -55,7 +50,7 @@
 
 .progressionbar {
   position: fixed;
-  z-index:10;
+  z-index: 10;
   top: 0;
   left: 0;
   width: 100%;
