--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -16,8 +16,8 @@ input[type=checkbox] {
          top: 0;
          left: 0;
          border: 2px solid #555555;
-         border-radius: 3px;
-         background-color: black;
+         border-radius: 5px;
+         background-color: #333;
 }
     input[type=checkbox]:checked:after {
          content: "";
