--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -6,21 +6,19 @@
 input[type=checkbox] {
 	position: relative;
 	cursor: pointer;
-	padding:10px 10px 10px 10px;
 }
 
 input[type=checkbox]:before {
          content: "";
          display: block;
          position: absolute;
-         width: 16px;
-         height: 16px;
+         width: 15px;
+         height: 15px;
          top: 0;
          left: 0;
          border: 2px solid #555555;
          border-radius: 5px;
          background-color: #333;
-	padding:10px 10px 10px 10px;
 }
 
 input[type=checkbox]:checked:after {
@@ -29,7 +27,7 @@ input[type=checkbox]:checked:after {
 	width: 5px;
 	height: 10px;
 	border: solid black;
-	border-width: 0 2px 2px 0;
+	//border-width: 0 2px 2px 0;
 	transform: rotate(45deg);
 	position: absolute;
 	top: 2px;
