--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -22,6 +22,7 @@ input[type=checkbox]:before {
 
 input[type=checkbox]:checked:after {
 	content: "";
+	position: absolute;
 	display: block;
 	width: 5px;
 	height: 10px;
