--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -14,7 +14,7 @@ input[type=checkbox]:before {
          position: absolute;
          width: 15px;
          height: 15px;
-         bottom: 5px;
+         top: 2px;
          left: 0;
          border: 2px solid #555555;
          background-color: #333;
