--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -6,6 +6,7 @@
 input[type=checkbox] {
 	position: relative;
 	cursor: pointer;
+	-moz-appearance: initial;
 }
 
 input[type=checkbox]:before {
@@ -18,6 +19,7 @@ input[type=checkbox]:before {
          left: 0;
          border: 2px solid #555555;
          background-color: #333;
+	 -moz-appearance: initial;
 }
 
 input[type=checkbox]:checked:after {
@@ -31,6 +33,7 @@ input[type=checkbox]:checked:after {
 	transform: rotate(45deg);
 	top: 2px;
 	left: 6px;
+	-moz-appearance: initial;
 }
 
 .label-for-check {
