--- a/pages/headsortails/style.css
+++ b/pages/headsortails/style.css
@@ -29,12 +29,6 @@ body {
     text-align: center;
     user-select: none;
 }
-
-footer {
-    position: absolute;
-    width: 100%;
-    bottom: 0; left: 0; right: 0;
-  }
   
 a {
     color: rgb(225, 197, 60);
@@ -52,6 +46,8 @@ a:hover {
     height: 160px;
     transition: transform 1s ease-in;
     transform-style: preserve-3d;
+    margin: auto;
+    text-align: center;
 }
 
 #flip {
@@ -59,14 +55,11 @@ a:hover {
 	border: 1px solid #cfae1d;
     border-radius: 5px;
 	color: white;
-	padding: 10px 20px;
-	text-align: center;
-	text-decoration: none;
-	display: inline-block;
+	width: 150px;
+    height: 50px;
 	font-size: 20px;
 	cursor: pointer;
-    box-shadow: 2px 2px 4px black;
-	transition-duration: 0.2s;
+	transition: 0.2s;
 }
 
 #flip:hover {
@@ -105,10 +98,4 @@ a:hover {
 
 .flipTail {
     animation: resultTail 2s ease-out forwards;
-}
-
-@media only screen and (max-width: 800px) {
-    footer {
-        position: relative;
-    }
 }
