--- a/pages/color/css/style.css
+++ b/pages/color/css/style.css
@@ -17,19 +17,32 @@ body {
     text-align: center;
 }
 
+footer {
+    position: absolute;
+    width: 100%;
+    bottom: 0; left: 0; right: 0;
+}
+  
+a {
+    color: rgb(255, 255, 255);
+    text-shadow: 2px 2px 8px black;
+    text-decoration:none;
+    font-size: 50px;
+}
+
+a:hover {
+    color: rgb(200, 200, 200);
+}
+
 #btn {
 	background-color: #fff;
+    border: none;
     border-radius: 5px;
-	padding: 10px 20px;
-	text-align: center;
-	text-decoration: none;
-	display: inline-block;
+	width: 200px;
+    height: 90px;
 	font-size: 40px;
 	cursor: pointer;
 	transition: 0.2s;
-    width: 150px;
-    height: 60px;
-    vertical-align: middle;
     box-shadow: 0 0 2px #333,
                 0 0 2px #333,
                 0 0 2px #333,
