--- a/pages/clicktest/style.css
+++ b/pages/clicktest/style.css
@@ -2,17 +2,24 @@
     font-family: Arial;
     text-shadow: 2px 2px 4px black;
     color: white;
+    text-align: center;
 }
 
 html {
-	  height: 100%;
+	height: 100%;
     background-image: url(./bg.jpg);
     background-position: center;
   	background-repeat: no-repeat;
 }
 
-body {
-    text-align: center;
+a {
+    text-decoration: none;
+    color: white;
+    font-size: 50px;
+}
+
+a:hover {
+    color: rgb(255, 180, 180);
 }
 
 h1 {
@@ -48,21 +55,19 @@ h1 {
 .bouton {
     background-color: #9b0000;
     border: 2px solid #610000;
-	  border-radius: 10px;
+	border-radius: 10px;
     color: white;
-    padding: 10px 30px;
     text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2), 0 1px 5px 0 rgba(0,0,0,0.19);
-	  transition: 0.1s;
+    width: 150px;
+	height: 50px;
+    font-size: 18px;
+	transition: 0.1s;
     cursor: pointer;
 }
 
 .bouton:hover {
 	background-color: #b63636;
-  border: 2px solid #610000;
+    border: 2px solid #610000;
 	color: white;
 }
 
