--- a/pages/chronometer/style.css
+++ b/pages/chronometer/style.css
@@ -11,11 +11,21 @@ body {
   text-shadow: 2px 2px 8px black;
 }
 
+a {
+  color: rgb(225, 60, 60);
+  text-decoration:none;
+  font-size: 50px;
+}
+
+a:hover {
+  color: rgb(255, 130, 130);
+}
+
 .bouton {
   width: 200px;
   height: 80px;
   border: 4px solid rgb(225, 60, 60);
-  background: #ffffff00;
+  background: transparent;
   color: rgb(225, 60, 60);
   cursor: pointer;
   font-size: 25px;
