--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -72,10 +72,17 @@ input[type=checkbox]:checked:after {
 	transition: background-color 0.2s ease 0s;
 }
 
-* {box-sizing: border-box}
-body {font-family: Verdana, sans-serif; margin:0}
-.mySlides {display: none}
-img {vertical-align: middle;}
+* {
+	box-sizing: border-box
+}
+
+.mySlides {
+	display: none
+}
+
+img {
+	vertical-align: middle;
+}
 
 .slideshow-container {
   max-width: 1000px;
