--- a/_layouts/cotcot.html
+++ b/_layouts/cotcot.html
@@ -31,7 +31,7 @@
   </head>
   <body>
     <header class="page-header" role="banner">
-      <h1 class="project-name"><img src="../pages/cotcotpack/img/logo.png" width="320"></h1>
+      <h1 class="project-name"><img src="./img/logo.png" width="320"></h1>
        <h2 class="project-tagline">Resource Pack</h2>
         <a href="https://github.com/PouletEnSlip" class="btn">My GitHub</a>
     </header>
