--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -73,11 +73,11 @@ input[type=checkbox]:checked:after {
 }
 
 * {
-	box-sizing: border-box
+	box-sizing: border-box;
 }
 
 .mySlides {
-	display: none
+	display: none;
 }
 
 img {
@@ -99,7 +99,7 @@ img {
 	  margin-top: -22px;
 	  color: white;
 	  font-weight: bold;
-	  font-size: 18px;
+	  font-size: 20px;
 	  transition: 0.6s ease;
 	  border-radius: 0 3px 3px 0;
 	  user-select: none;
@@ -108,10 +108,6 @@ img {
 .next {
 	  right: 0;
 	  border-radius: 3px 0 0 3px;
-}
-
-.prev:hover, .next:hover {
-	  background-color: rgba(0,0,0,0.8);
 }
 
 .numbertext {
