--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -97,7 +97,7 @@ img {
 	  width: auto;
 	  padding: 16px;
 	  margin-top: -22px;
-	  color: white;
+	  color: black;
 	  font-weight: bold;
 	  font-size: 20px;
 	  transition: 0.6s ease;
@@ -111,7 +111,7 @@ img {
 }
 
 .numbertext {
-	color: #f2f2f2;
+	color: black;
 	font-size: 12px;
 	padding: 8px 12px;
 	position: absolute;
@@ -132,7 +132,7 @@ img {
 
 .fade {
 	  animation-name: fade;
-	  animation-duration: 1.5s;
+	  animation-duration: 1s;
 }
 
 @keyframes fade {
