--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -85,29 +85,30 @@ img {
 }
 
 .slideshow-container {
-	  max-width: 1000px;
-	  position: relative;
-	  margin: auto;
+	max-width: 1000px;
+	position: relative;
+	margin: auto;
 }
 
 .prev, .next {
-	  cursor: pointer;
-	  position: absolute;
-	  top: 50%;
-	  width: auto;
-	  padding: 16px;
-	  margin-top: -22px;
-	  color: black;
-	  font-weight: bold;
-	  font-size: 20px;
-	  transition: 0.6s ease;
-	  border-radius: 0 3px 3px 0;
-	  user-select: none;
+	cursor: pointer;
+	position: absolute;
+	top: 50%;
+	width: auto;
+	padding: 16px;
+	margin-top: -22px;
+	color: black;
+	font-weight: bold;
+	font-size: 20px;
+	transition: 0.6s ease;
+	border-radius: 0 3px 3px 0;
+	user-select: none;
+	text-decoration: none;
 }
 
 .next {
-	  right: 0;
-	  border-radius: 3px 0 0 3px;
+	right: 0;
+	border-radius: 3px 0 0 3px;
 }
 
 .numbertext {
@@ -116,26 +117,29 @@ img {
 	padding: 8px 12px;
 	position: absolute;
 	top: 0;
-	text-decoration: none;
 }
 
 .dot {
-	  cursor: pointer;
-	  height: 15px;
-	  width: 15px;
-	  margin: 0 2px;
-	  background-color: #bbb;
-	  border-radius: 50%;
-	  display: inline-block;
-	  transition: background-color 0.6s ease;
+	cursor: pointer;
+	height: 15px;
+	width: 15px;
+	margin: 0 2px;
+	background-color: #bbb;
+	border-radius: 50%;
+	display: inline-block;
+	transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+	background-color: #717171;
 }
 
 .fade {
-	  animation-name: fade;
-	  animation-duration: 1s;
+	animation: fade;
+	animation-duration: 1s;
 }
 
 @keyframes fade {
-	  from {opacity: .4} 
-	  to {opacity: 1}
+	from {opacity: .4} 
+	to {opacity: 1}
 }
