--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,6 +7,7 @@ input[type=checkbox] {
 	position: relative;
 	cursor: pointer;
 	-moz-appearance: initial;
+	vertical-align: middle;
 }
 
 input[type=checkbox]:before {
@@ -33,6 +34,7 @@ input[type=checkbox]:checked:after {
 
 .label-for-check {
 	padding-left: 12px;
+	vertical-align: middle;
 }
 
 .check-with-label:checked + .label-for-check {
