--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -25,7 +25,7 @@ input[type=checkbox]:checked:after {
 	display: block;
 	width: 5px;
 	height: 10px;
-	border: solid black;
+	border: solid #000;
 	border-width: 0 2px 2px 0;
 	transform: rotate(45deg);
 	top: 2px;
@@ -62,7 +62,7 @@ input[type=checkbox]:checked:after {
 	width: 55px;
 	height: 55px;
 	font-size: 42px;
-	color: white;
+	color: #fff;
 	background-color: rgba(13, 109, 182, 0.7);
 	border: none;
 	border-radius: 10px;
@@ -99,10 +99,10 @@ img {
 	width: auto;
 	padding: 16px;
 	margin-top: -22px;
-	color: black;
+	color: #000;
 	font-weight: bold;
 	font-size: 20px;
-	transition: 0.6s ease;
+	transition: 0.2s ease;
 	border-radius: 0 3px 3px 0;
 	user-select: none;
 	text-decoration: none;
@@ -114,7 +114,7 @@ img {
 }
 
 .numbertext {
-	color: black;
+	color: #000;
 	font-size: 12px;
 	padding: 8px 12px;
 	position: absolute;
@@ -129,7 +129,7 @@ img {
 	background-color: #bbb;
 	border-radius: 50%;
 	display: inline-block;
-	transition: background-color 0.6s ease;
+	transition: background-color 0.2s ease;
 }
 
 .active, .dot:hover {
@@ -142,6 +142,6 @@ img {
 }
 
 @keyframes fade {
-	from {opacity: .4} 
+	from {opacity: .5} 
 	to {opacity: 1}
 }
