--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -106,7 +106,12 @@ img {
 	border-radius: 0 3px 3px 0;
 	user-select: none;
 	text-decoration: none;
-	background-color: #00000080
+	background-color: #00000080;
+}
+
+.prev:hover, .next:hover {
+	background-color: #00000040;
+	text-decoration: none;
 }
 
 .next {
@@ -120,7 +125,7 @@ img {
 	padding: 8px 12px;
 	position: absolute;
 	top: 0;
-	background-color: #00000080
+	background-color: #00000080;
 }
 
 .dot {
