--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -98,7 +98,7 @@ img {
 	top: 50%;
 	width: auto;
 	padding: 16px;
-	margin-top: -22px;
+	//margin-top: -22px;
 	color: #fff;
 	font-weight: bold;
 	font-size: 20px;
@@ -140,7 +140,7 @@ img {
 }
 
 .active, .dot:hover {
-	background-color: #717171;
+	background-color: #888;
 }
 
 .fade {
