--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -1,304 +1,294 @@
 @import url('https://fonts.googleapis.com/css2?family=Courier+Prime&family=Roboto&display=swap');
 
 @mixin large {
-  @media screen and (min-width: 70em) {
-    @content;
-  }
+	@media screen and (min-width: 70em) {
+		@content;
+	}
 }
 
 @mixin medium {
-  @media screen and (min-width: 42em) and (max-width: 70em) {
-    @content;
-  }
+	@media screen and (min-width: 42em) and (max-width: 70em) {
+		@content;
+	}
 }
 
 @mixin small {
-  @media screen and (max-width: 42em) {
-    @content;
-  }
+	@media screen and (max-width: 42em) {
+		@content;
+	}
 }
 
 html {
-  font-family: "Roboto";
-  font-size: 1rem;
-  color: #a6a19a;
-  background: #181a1b;
+	font-family: "Roboto";
+	font-size: 1rem;
+	color: #a6a19a;
+	background: #181a1b;
 }
 
 body {
-  padding: 0;
-  margin: 0;
-  line-height: 1.5;
+	padding: 0;
+	margin: 0;
+	line-height: 1.7;
 }
 
 a {
-  color: #65ace6;
-  text-decoration: none;
+	color: #65ace6;
+	text-decoration: none;
 
-  &:hover {
-    text-decoration: underline;
-  }
+	&:hover {
+		text-decoration: underline;
+	}
 }
 
 .btn {
-  font-family: "Roboto";
-  display: inline-block;
-  margin-bottom: 1rem;
-  color: rgba(255, 255, 255, .6);
-  background: rgba(50, 50, 50, .1);
-  border-color: rgba(50, 50, 50, .2);
-  border-style: solid;
-  border-width: 1px;
-  border-radius: .3rem;
-  transition: .2s;
+	font-family: "Roboto";
+	display: inline-block;
+	margin-bottom: 1rem;
+	color: rgba(255, 255, 255, .6);
+	background: rgba(50, 50, 50, .1);
+	border-color: rgba(50, 50, 50, .2);
+	border-style: solid;
+	border-width: 1px;
+	border-radius: .3rem;
+	transition: .2s;
 
-  &:hover {
-    text-decoration: none;
-    background: rgba(50, 50, 50, .2);
-    border-color: rgba(50, 50, 50, .3);
-  }
+	&:hover {
+		text-decoration: none;
+		background: rgba(50, 50, 50, .2);
+		border-color: rgba(50, 50, 50, .3);
+	}
 
-  + .btn {
-    margin-left: 1rem;
-  }
+	+ .btn {
+		margin-left: 1rem;
+	}
 
-  @include large {
-    padding: .75rem 1rem;
-  }
+	@include large {
+		padding: .75rem 1rem;
+	}
 
-  @include medium {
-    padding: .6rem .9rem;
-  }
+	@include medium {
+		padding: .6rem .9rem;
+	}
 
-  @include small {
-    display: block;
-    width: 100%;
-    padding: .75rem;
+	@include small {
+		display: block;
+		width: 100%;
+		padding: .75rem;
 
-    + .btn {
-      margin-top: 1rem;
-      margin-left: 0;
-    }
-  }
+		+ .btn {
+			margin-top: 1rem;
+			margin-left: 0;
+		}
+	}
 }
 
 .page-header {
-  color: #fff;
-  text-align: center;
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 2000 1500'%3E%3Cdefs%3E%3CradialGradient id='a' gradientUnits='objectBoundingBox'%3E%3Cstop offset='0' stop-color='%23006733'/%3E%3Cstop offset='1' stop-color='%23003D7B'/%3E%3C/radialGradient%3E%3ClinearGradient id='b' gradientUnits='userSpaceOnUse' x1='0' y1='750' x2='1550' y2='750'%3E%3Cstop offset='0' stop-color='%23005257'/%3E%3Cstop offset='1' stop-color='%23003D7B'/%3E%3C/linearGradient%3E%3Cpath id='s' fill='url(%23b)' d='M1549.2 51.6c-5.4 99.1-20.2 197.6-44.2 293.6c-24.1 96-57.4 189.4-99.3 278.6c-41.9 89.2-92.4 174.1-150.3 253.3c-58 79.2-123.4 152.6-195.1 219c-71.7 66.4-149.6 125.8-232.2 177.2c-82.7 51.4-170.1 94.7-260.7 129.1c-90.6 34.4-184.4 60-279.5 76.3C192.6 1495 96.1 1502 0 1500c96.1-2.1 191.8-13.3 285.4-33.6c93.6-20.2 185-49.5 272.5-87.2c87.6-37.7 171.3-83.8 249.6-137.3c78.4-53.5 151.5-114.5 217.9-181.7c66.5-67.2 126.4-140.7 178.6-218.9c52.3-78.3 96.9-161.4 133-247.9c36.1-86.5 63.8-176.2 82.6-267.6c18.8-91.4 28.6-184.4 29.6-277.4c0.3-27.6 23.2-48.7 50.8-48.4s49.5 21.8 49.2 49.5c0 0.7 0 1.3-0.1 2L1549.2 51.6z'/%3E%3Cg id='g'%3E%3Cuse href='%23s' transform='scale(0.12) rotate(60)'/%3E%3Cuse href='%23s' transform='scale(0.2) rotate(10)'/%3E%3Cuse href='%23s' transform='scale(0.25) rotate(40)'/%3E%3Cuse href='%23s' transform='scale(0.3) rotate(-20)'/%3E%3Cuse href='%23s' transform='scale(0.4) rotate(-30)'/%3E%3Cuse href='%23s' transform='scale(0.5) rotate(20)'/%3E%3Cuse href='%23s' transform='scale(0.6) rotate(60)'/%3E%3Cuse href='%23s' transform='scale(0.7) rotate(10)'/%3E%3Cuse href='%23s' transform='scale(0.835) rotate(-40)'/%3E%3Cuse href='%23s' transform='scale(0.9) rotate(40)'/%3E%3Cuse href='%23s' transform='scale(1.05) rotate(25)'/%3E%3Cuse href='%23s' transform='scale(1.2) rotate(8)'/%3E%3Cuse href='%23s' transform='scale(1.333) rotate(-60)'/%3E%3Cuse href='%23s' transform='scale(1.45) rotate(-30)'/%3E%3Cuse href='%23s' transform='scale(1.6) rotate(10)'/%3E%3C/g%3E%3C/defs%3E%3Cg transform='rotate(0 0 0)'%3E%3Cg transform='rotate(0 0 0)'%3E%3Ccircle fill='url(%23a)' r='3000'/%3E%3Cg opacity='0.5'%3E%3Ccircle fill='url(%23a)' r='2000'/%3E%3Ccircle fill='url(%23a)' r='1800'/%3E%3Ccircle fill='url(%23a)' r='1700'/%3E%3Ccircle fill='url(%23a)' r='1651'/%3E%3Ccircle fill='url(%23a)' r='1450'/%3E%3Ccircle fill='url(%23a)' r='1250'/%3E%3Ccircle fill='url(%23a)' r='1175'/%3E%3Ccircle fill='url(%23a)' r='900'/%3E%3Ccircle fill='url(%23a)' r='750'/%3E%3Ccircle fill='url(%23a)' r='500'/%3E%3Ccircle fill='url(%23a)' r='380'/%3E%3Ccircle fill='url(%23a)' r='250'/%3E%3C/g%3E%3Cg transform='rotate(0 0 0)'%3E%3Cuse href='%23g' transform='rotate(10)'/%3E%3Cuse href='%23g' transform='rotate(120)'/%3E%3Cuse href='%23g' transform='rotate(240)'/%3E%3C/g%3E%3Ccircle fill-opacity='0.1' fill='url(%23a)' r='3000'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
-  background-attachment: fixed;
-  background-size: cover;
+	color: #fff;
+	text-align: center;
+	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 2000 1500'%3E%3Cdefs%3E%3CradialGradient id='a' gradientUnits='objectBoundingBox'%3E%3Cstop offset='0' stop-color='%23006733'/%3E%3Cstop offset='1' stop-color='%23003D7B'/%3E%3C/radialGradient%3E%3ClinearGradient id='b' gradientUnits='userSpaceOnUse' x1='0' y1='750' x2='1550' y2='750'%3E%3Cstop offset='0' stop-color='%23005257'/%3E%3Cstop offset='1' stop-color='%23003D7B'/%3E%3C/linearGradient%3E%3Cpath id='s' fill='url(%23b)' d='M1549.2 51.6c-5.4 99.1-20.2 197.6-44.2 293.6c-24.1 96-57.4 189.4-99.3 278.6c-41.9 89.2-92.4 174.1-150.3 253.3c-58 79.2-123.4 152.6-195.1 219c-71.7 66.4-149.6 125.8-232.2 177.2c-82.7 51.4-170.1 94.7-260.7 129.1c-90.6 34.4-184.4 60-279.5 76.3C192.6 1495 96.1 1502 0 1500c96.1-2.1 191.8-13.3 285.4-33.6c93.6-20.2 185-49.5 272.5-87.2c87.6-37.7 171.3-83.8 249.6-137.3c78.4-53.5 151.5-114.5 217.9-181.7c66.5-67.2 126.4-140.7 178.6-218.9c52.3-78.3 96.9-161.4 133-247.9c36.1-86.5 63.8-176.2 82.6-267.6c18.8-91.4 28.6-184.4 29.6-277.4c0.3-27.6 23.2-48.7 50.8-48.4s49.5 21.8 49.2 49.5c0 0.7 0 1.3-0.1 2L1549.2 51.6z'/%3E%3Cg id='g'%3E%3Cuse href='%23s' transform='scale(0.12) rotate(60)'/%3E%3Cuse href='%23s' transform='scale(0.2) rotate(10)'/%3E%3Cuse href='%23s' transform='scale(0.25) rotate(40)'/%3E%3Cuse href='%23s' transform='scale(0.3) rotate(-20)'/%3E%3Cuse href='%23s' transform='scale(0.4) rotate(-30)'/%3E%3Cuse href='%23s' transform='scale(0.5) rotate(20)'/%3E%3Cuse href='%23s' transform='scale(0.6) rotate(60)'/%3E%3Cuse href='%23s' transform='scale(0.7) rotate(10)'/%3E%3Cuse href='%23s' transform='scale(0.835) rotate(-40)'/%3E%3Cuse href='%23s' transform='scale(0.9) rotate(40)'/%3E%3Cuse href='%23s' transform='scale(1.05) rotate(25)'/%3E%3Cuse href='%23s' transform='scale(1.2) rotate(8)'/%3E%3Cuse href='%23s' transform='scale(1.333) rotate(-60)'/%3E%3Cuse href='%23s' transform='scale(1.45) rotate(-30)'/%3E%3Cuse href='%23s' transform='scale(1.6) rotate(10)'/%3E%3C/g%3E%3C/defs%3E%3Cg transform='rotate(0 0 0)'%3E%3Cg transform='rotate(0 0 0)'%3E%3Ccircle fill='url(%23a)' r='3000'/%3E%3Cg opacity='0.5'%3E%3Ccircle fill='url(%23a)' r='2000'/%3E%3Ccircle fill='url(%23a)' r='1800'/%3E%3Ccircle fill='url(%23a)' r='1700'/%3E%3Ccircle fill='url(%23a)' r='1651'/%3E%3Ccircle fill='url(%23a)' r='1450'/%3E%3Ccircle fill='url(%23a)' r='1250'/%3E%3Ccircle fill='url(%23a)' r='1175'/%3E%3Ccircle fill='url(%23a)' r='900'/%3E%3Ccircle fill='url(%23a)' r='750'/%3E%3Ccircle fill='url(%23a)' r='500'/%3E%3Ccircle fill='url(%23a)' r='380'/%3E%3Ccircle fill='url(%23a)' r='250'/%3E%3C/g%3E%3Cg transform='rotate(0 0 0)'%3E%3Cuse href='%23g' transform='rotate(10)'/%3E%3Cuse href='%23g' transform='rotate(120)'/%3E%3Cuse href='%23g' transform='rotate(240)'/%3E%3C/g%3E%3Ccircle fill-opacity='0.1' fill='url(%23a)' r='3000'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+	background-attachment: fixed;
+	background-size: cover;
 
-  @include large {
-    padding: 4rem;
-  }
+	@include large {
+		padding: 4rem;
+	}
 
-  @include medium {
-    padding: 3rem;
-  }
+	@include medium {
+		padding: 3rem;
+	}
 
-  @include small {
-    padding: 2rem;
-  }
+	@include small {
+		padding: 2rem;
+	}
 }
 
 .project-name {
-  margin-top: 0;
-  margin-bottom: .1rem;
+	margin-top: 0;
+	margin-bottom: .1rem;
 
-  @include large {
-    font-size: 3.25rem;
-  }
+	@include large {
+		font-size: 3.25rem;
+	}
 
-  @include medium {
-    font-size: 2.25rem;
-  }
+	@include medium {
+		font-size: 2.25rem;
+	}
 
-  @include small {
-    font-size: 1.75rem;
-  }
+	@include small {
+		font-size: 1.75rem;
+	}
 }
 
 .project-tagline {
-  margin-bottom: 2rem;
-  font-weight: normal;
-  opacity: .7;
+	margin-bottom: 2rem;
+	font-weight: normal;
+	opacity: .7;
 
-  @include large {
-    font-size: 1.25rem;
-  }
+	@include large {
+		font-size: 1.25rem;
+	}
 
-  @include medium {
-    font-size: 1.15rem;
-  }
+	@include medium {
+		font-size: 1.15rem;
+	}
 
-  @include small {
-    font-size: 1rem;
-  }
+	@include small {
+		font-size: 1rem;
+	}
 }
 
 .main-content {
-  :first-child {
-    margin-top: 0;
-  }
+	:first-child {
+		margin-top: 0;
+	}
 
-  @include large {
-    max-width: 64rem;
-    padding: 2rem 6rem;
-    margin: 0 auto;
-    font-size: 1rem;
-  }
+	@include large {
+		max-width: 64rem;
+		padding: 2rem 6rem;
+		margin: 0 auto;
+		font-size: 1rem;
+	}
 
-  @include medium {
-    padding: 2rem 4rem;
-    font-size: 1rem;
-  }
+	@include medium {
+		padding: 2rem 4rem;
+		font-size: 1rem;
+	}
 
-  @include small {
-    padding: 2rem 1rem;
-    font-size: 1rem;
-  }
+	@include small {
+		padding: 2rem 1rem;
+		font-size: 1rem;
+	}
   
-  kbd {
-    font-family: "Roboto";
-    background: none;
-    border: 1px solid #a6a19a;
-    border-bottom: 2px solid #a6a19a;
-    border-radius: 3px;
-    margin: 0 4px 0 4px;
-    color: #a6a19a;
-    display: inline-block;
-    font-size: 12px;
-    line-height: 10px;
-    padding: 4px 4px 4px 4px;
-    vertical-align: middle;
-  }
+	kbd {
+		font-family: "Roboto";
+		background: none;
+		border: 1px solid #a6a19a;
+		border-bottom: 2px solid #a6a19a;
+		border-radius: 3px;
+		margin: 0 4px 0 4px;
+		color: #a6a19a;
+		display: inline-block;
+		font-size: 12px;
+		line-height: 10px;
+		padding: 4px 4px 4px 4px;
+		vertical-align: middle;
+	}
 
-  img {
-    max-width: 100%;
-  }
+	img {
+		max-width: 100%;
+	}
 
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
-    margin-top: 2rem;
-    margin-bottom: 1rem;
-    color: #4ec78b;
-  }
+	h1, h2, h3, h4, h5, h6 {
+		margin-top: 2rem;
+		margin-bottom: 1rem;
+		color: #4ec78b;
+	}
 
-  p {
-    margin-bottom: 1em;
-  }
+	p {
+		margin-bottom: 1em;
+	}
 
-  code {
-    padding: 2px 4px;
-    font-family: Courier Prime;
-    font-size: .9rem;
-    color: #a6a19a;
-    background: #144163;
-    border-radius: .3rem;
-  }
+	code {
+		padding: 2px 4px;
+		font-family: Courier Prime;
+		font-size: .9rem;
+		color: #a6a19a;
+		background: #144163;
+		border-radius: .3rem;
+	}
 
-  pre {
-    padding: 0.8rem;
-    margin-top: 0;
-    margin-bottom: 1rem;
-    font: 1rem Courier Prime;
-    color: #a6a19a;
-    word-wrap: normal;
-    background: #144163;
-    border: solid 1px #dce6f0;
-    border-radius: .3rem;
+	pre {
+		padding: 0.8rem;
+		margin-top: 0;
+		margin-bottom: 1rem;
+		font: 1rem Courier Prime;
+		color: #a6a19a;
+		word-wrap: normal;
+		background: #144163;
+		border: solid 1px #dce6f0;
+		border-radius: .3rem;
 
-    > code {
-      padding: 0;
-      margin: 0;
-      font-size: .9rem;
-      color: #567482;
-      word-break: normal;
-      white-space: pre;
-      background: none;
-      border: 0;
-    }
-  }
+		> code {
+			padding: 0;
+			margin: 0;
+			font-size: .9rem;
+			color: #567482;
+			word-break: normal;
+			white-space: pre;
+			background: none;
+			border: 0;
+		}
+	}
 
-  .highlight {
-    margin-bottom: 1rem;
+	.highlight {
+		margin-bottom: 1rem;
 
-    pre {
-      margin-bottom: 0;
-      word-break: normal;
-    }
-  }
+		pre {
+			margin-bottom: 0;
+			word-break: normal;
+		}
+	}
 
-  .highlight pre,
-  pre {
-    padding: .8rem;
-    overflow: auto;
-    font-size: .9rem;
-    line-height: 1.45;
-    border-radius: .3rem;
-  }
+	.highlight pre, pre {
+		padding: .8rem;
+		overflow: auto;
+		font-size: .9rem;
+		line-height: 1.45;
+		border-radius: .3rem;
+	}
 
-  pre code,
-  pre tt {
-    display: inline;
-    max-width: initial;
-    padding: 0;
-    margin: 0;
-    overflow: initial;
-    line-height: inherit;
-    word-wrap: normal;
-    background: none;
-    border: 0;
+	pre code, pre tt {
+		display: inline;
+		max-width: initial;
+		padding: 0;
+		margin: 0;
+		overflow: initial;
+		line-height: inherit;
+		word-wrap: normal;
+		background: none;
+		border: 0;
 
-    &:before,
-    &:after {
-      content: normal;
-    }
-  }
+		&:before, &:after {
+			content: normal;
+		}
+	}
 
-  ul,
-  ol {
-    margin-top: 0;
-  }
+	ul, ol {
+		margin-top: 0;
+	}
 
-  table {
-    display: block;
-    width: 100%;
-    overflow: auto;
+	table {
+		display: block;
+		width: 100%;
+		overflow: auto;
 
-    th {
-      font-weight: bold;
-    }
+		th {
+			font-weight: bold;
+		}
 
-    th,
-    td {
-      padding: .5rem 1rem;
-      border: 1px solid #e9ebec;
-    }
-  }
+		th, td {
+			padding: .5rem 1rem;
+			border: 1px solid #e9ebec;
+		}
+	}
 
-  hr {
-	  border-top: 2px #a6a19a;
-  }
+	hr {
+		border-top: 2px #333;
+	}
 }
 
 .site-footer {
-  padding-top: 2rem;
-  margin-top: 2rem;
-  border-top: solid 1px #eff0f1;
-  font-size: 1rem;
+	padding-top: 2rem;
+	margin-top: 2rem;
+	border-top: solid 1px #eff0f1;
+	font-size: 1rem;
 }
 
 .site-footer-owner {
-  display: block;
-  font-weight: bold;
+	display: block;
+	font-weight: bold;
 }
 
 .site-footer-credits {
-  color: #819198;
+	color: #819198;
 }
